--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -4,6 +4,7 @@ glx-copy-from-front= false;
 
 # Corners
 corner-radius = 5;
+round-borders = 1;
 rounded-corners-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'"
