--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -75,8 +75,8 @@ separator-foreground = ${colors.flamingo}
 font-0 = "Hack Nerd Font Mono:size=10;1"
 font-1 = "Hack Nerd Font Mono:size=20;4"
 
-modules-left = xworkspaces xwindow
-modules-right = filesystem xbacklight pulseaudio battery memory cpu network xkeyboard date
+modules-left = xworkspaces i3 xwindow
+modules-right = filesystem xbacklight pulseaudio battery memory cpu network xkeyboard date systray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -89,61 +89,16 @@ wm-restack = i3
 
 ; override-redirect = true
 ;
-; [module/i3]
-; type = internal/i3
-;
-; ; Only show workspaces defined on the same output as the bar
-; ;
-; ; Useful if you want to show monitor specific workspaces
-; ; on different bars
-; ;
-; ; Default: false
-; pin-workspaces = true
-;
-; ; Show urgent workspaces regardless of whether the workspace is actually hidden 
-; ; by pin-workspaces.
-; ;
-; ; Default: false
-; ; New in version 3.6.0
-; show-urgent = true
-;
-; ; This will split the workspace name on ':'
-; ; Default: false
-; strip-wsnumbers = true
-;
-; ; Sort the workspaces by index instead of the default
-; ; sorting that groups the workspaces by output
-; ; Default: false
-; index-sort = true
-;
-; ; Create click handler used to focus workspace
-; ; Default: true
-; enable-click = false
-;
-; ; Create scroll handlers used to cycle workspaces
-; ; Default: true
-; enable-scroll = false
-;
-; ; Wrap around when reaching the first/last workspace
-; ; Default: true
-; wrapping-scroll = false
-;
-; ; Set the scroll cycle direction 
-; ; Default: true
-; reverse-scroll = false
-;
-; ; Use fuzzy (partial) matching for wc-icon.
-; ; Example: code;♚ will apply the icon to all workspaces 
-; ; containing 'code' in the name
-; ; Changed in version 3.7.0: Selects longest string match instead of the first match.
-; ; Default: false
-; fuzzy-match = true
+[module/i3]
+type = internal/i3
+label-focused = "%index%: %mode%"
+format = <label-focused>
 
 [module/systray]
 type = internal/tray
 
 format-margin = 8pt
-tray-spacing = 16pt
+tray-spacing = 8pt
 
 [module/xworkspaces]
 type = internal/xworkspaces
