--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,11 +1,7 @@
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 
-# set-option -g default-terminal 'tmux-256color'
 set-option -sa terminal-overrides ",xterm*:Tc"
-# set-option -a terminal-features 'tmux-256color:RGB'
-# set-option -a terminal-overrides 'tmux-256-color:Tc'
-# set-option -g terminal-overrides 'screen-254color'
 
 set -g prefix C-s
 set -g mouse on
@@ -13,17 +9,23 @@ set -g mouse on
 set -g renumber-windows on #renomear windows
 set -g set-clipboard on # use system clipboard
 
+# start with 1
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+
 
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-bind C-p previous-window
-bind C-n next-window
+bind -n M-h previous-window
+bind -n M-l next-window
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
 
