change tmux file location

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,16 +1,15 @@
-unbind r
-bind r source-file ~/.config/tmux/tmux.conf
+bind r source-file ~/.tmux.conf \; display-message "Reloaded!"
 
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 set -g prefix C-s
 set -g mouse on
 
-set -g renumber-windows on #renomear windows
+set -g renumber-windows on #rename windows
 set -g set-clipboard on # use system clipboard
 
 # start with 1
-set -g base-index 1
+set -g base-index 1 
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 
