--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -14,7 +14,7 @@ set $mod Mod4
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 # font pango:hack nerd 12
-font xft:Hack Nerd Font, FontAwesome 0
+font xft:Hack Nerd Font, FontAwesome 12
 # default_border pixel 1
 # default_floating_border pixel 1
 # for_window [class=".*"] title_format " "
@@ -36,10 +36,6 @@ exec --no-startup-id dex --autostart --environment i3
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-
-# NetworkManager is the most popular way to manage wireless networks on Linux,
-# and nm-applet is a desktop environment-independent system tray GUI for it.
-exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -70,22 +66,17 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec wezterm 
+bindsym $mod+Return exec kitty 
 
 # kill focused window
 bindsym $mod+q kill
 
-# start dmenu (a program launcher)
-# bindsym $mod+d exec --no-startup-id dmenu_run
-# bindsym $mod+d exec --no-startup-id rofi -show drun
+# start rofi (a program launcher)
 bindsym $mod+p exec --no-startup-id /home/erudhir/.config/rofi/launcher.sh 
 bindsym $mod+shift+p exec --no-startup-id /home/erudhir/.config/rofi/powermenu.sh
-# bindsym $mod+d exec --no-startup-id rofi run -show drun 
-# A more modern dmenu replacement is rofi:
-# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
-# There also is i3-dmenu-desktop which only displays applications shipping a
-# .desktop file. It is a wrapper around dmenu, so you need that installed.
-# bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
+
+#print screen
+bindsym --release Print exec "flameshot gui"
 
 # change focus
 bindsym $mod+h focus left
@@ -171,10 +162,9 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
+
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-# bindsym $mod+Shift+q exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 # mode "resize" {
@@ -203,10 +193,10 @@ bindsym $mod+Shift+r restart
 
 # bindsym $mod+r mode "resize"
 
-bindsym $mod+Control h resize shrink width 5px or 5 ppt
-bindsym $mod+Control j resize shrink height 5px or 5 ppt
-bindsym $mod+Control k resize grow height 5px or 5 ppt
-bindsym $mod+Control l resize grow width 5px or 5 ppt
+bindsym $mod+Control h exec python ./scripts/size.py left 50
+bindsym $mod+Control j exec python ./scripts/size.py down 50
+bindsym $mod+Control k exec python ./scripts/size.py up 50
+bindsym $mod+Control l exec python ./scripts/size.py right 50
 
 
 # Start i3bar to display a workspace bar (plus the system information i3status
@@ -239,14 +229,12 @@ bindsym $mod+Control l resize grow width 5px or 5 ppt
 #     }
 # }
 
-# exec_always --no-startup-id xrandr --auto --output eDP-1 --primary --mode 1920x1080 --rate 60.00 --output HDMI-1 --mode 1920x1080 --rate 144.00 --right-of eDP-1 
-# exec_always --no-startup-id xrandr --auto --output eDP-1 --mode 1920x1080
-# exec_always --no-startup-id xrandr --auto --output HDMI-1 --mode 1920x1080 --refresh 144 --above eDP-1
+exec_always --no-startup-id autotiling 
 exec_always --no-startup-id autorandr --change 
 exec_always --no-startup-id feh --bg-fill /mnt/Backup/Documents/Images/painting.jpg 
 exec_always --no-startup-id picom --config ~/.config/picom/picom.conf
 exec_always --no-startup-id ~/.config/polybar/launch.sh 
-# exec_always --no-startup-id libinput-gestures-setup start
+exec_always --no-startup-id libinput-gestures-setup start
 exec_always --no-startup-id blueman-applet 
 exec_always --no-startup-id nm-applet 
 exec_always --no-startup-id flameshot 
