changes some configs com qtile and picom

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -16,7 +16,7 @@ detect-rounded-corners = true;
 detect-transient= true;
 mark-ovredir-focused = true;
 mark-wmwin-focused = true;
-vsync = true;
+# vsync = true;
 
 # blur-background = true;
 # blur-background-exclude = [
