--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -52,7 +52,7 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & nm-applet & blueman-applet
+exec-once = waybar & nm-applet & blueman-applet
 
 
 #############################
