hypr and wofi more configurations

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -40,8 +40,7 @@ bindl = , switch:off:Lid Switch, exec, hyprctl keyword monitor "eDP-1, 1920x1080
 # Set programs that you use
 $terminal = kitty
 $fileManager = nautilus
-$menu = wofi --show drun
-
+$menu = wofi
 
 #################
 ### AUTOSTART ###
@@ -52,7 +51,7 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & nm-applet & blueman-applet
+exec-once = waybar & hyprpaper & nm-applet & blueman-applet
 
 
 #############################
