--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -16,7 +16,9 @@ detect-rounded-corners = true;
 detect-transient= true;
 mark-ovredir-focused = true;
 mark-wmwin-focused = true;
-# vsync = true;
+use-damage = true;
+refresh-rate = 0;
+vsync = true;
 
 # blur-background = true;
 # blur-background-exclude = [
