--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -76,7 +76,7 @@ font-0 = "Hack Nerd Font Mono:size=10;1"
 font-1 = "Hack Nerd Font Mono:size=20;4"
 
 modules-left = xworkspaces i3 xwindow
-modules-right = filesystem xbacklight pulseaudio battery memory cpu network xkeyboard date systray
+modules-right = filesystem xbacklight pulseaudio battery memory cpu temperature backlight xkeyboard popup-calendar systray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -96,9 +96,30 @@ format = <label-focused>
 
 [module/systray]
 type = internal/tray
-
 format-margin = 8pt
 tray-spacing = 8pt
+
+[module/backlight]
+type = internal/backlight
+card = intel_backlight
+enable-scroll = false
+format = <label>
+
+[module/temperature]
+type = internal/temperature
+interval = 5
+thermal-zone = 0
+zone-type = x86_pkg_temp
+hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input
+base-temperature = 20
+warn-temperature = 70
+format = <ramp> <label>
+format-warn = <ramp> <label-warn>
+label-warn-foreground = #f00
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-foreground = #55
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -294,11 +315,8 @@ label = %percentage:2%%
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "RAM "
-format-prefix-foreground = ${colors.flamingo}
-label = %percentage_used:2%%
+label = RAM %percentage_used:2%%
 
-; [network-base]
 ; type = internal/network
 ; interval = 5
 ; format-connected = <label-connected>
@@ -427,11 +445,18 @@ animation-packetloss-1-foreground = ${colors.base}
 ; Framerate in milliseconds
 animation-packetloss-framerate = 500
 
+[module/popup-calendar]
+type = custom/script
+exec = ~/dotfiles/scripts/popupCalendar.sh 
+interval = 1
+click-left = ~/dotfiles/scripts/popupCalendar.sh --popup &
+label-foreground = ${colors.flamingo}
+
 [module/date]
 type = internal/date
 interval = 1
 
-date = %H:%M:%S - %d/%m/%Y
+date = %H:%M:%S - %d/%m/%y
 
 label = %date%
 label-foreground = ${colors.flamingo}
