fix polybar and nvim issue, some style changes from qtile

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -76,7 +76,7 @@ font-0 = "Hack Nerd Font Mono:size=10;1"
 font-1 = "Hack Nerd Font Mono:size=20;4"
 
 modules-left = xworkspaces i3 xwindow
-modules-right = filesystem xbacklight pulseaudio battery memory cpu temperature backlight xkeyboard popup-calendar systray
+modules-right = filesystem xbacklight pulseaudio battery memory cpu temperature backlight xkeyboard date systray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -445,21 +445,14 @@ animation-packetloss-1-foreground = ${colors.base}
 ; Framerate in milliseconds
 animation-packetloss-framerate = 500
 
-[module/popup-calendar]
-type = custom/script
-exec = ~/dotfiles/scripts/popupCalendar.sh 
-interval = 1
-click-left = ~/dotfiles/scripts/popupCalendar.sh --popup &
-label-foreground = ${colors.flamingo}
-
 [module/date]
 type = internal/date
 interval = 1
-
 date = %H:%M:%S - %d/%m/%y
-
 label = %date%
 label-foreground = ${colors.flamingo}
+click-rigth = yad --calendar --width=300 --height=300 --center
+
 
 [settings]
 screenchange-reload = true
