--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -1,4 +1,5 @@
 backend= "glx";
+enable = true;
 glx-no-stencil= true; 
 glx-copy-from-front= false;
 
@@ -20,6 +21,9 @@ use-damage = true;
 refresh-rate = 0;
 vsync = true;
 
+shadow-exclude = [
+"class_g = 'Dunst'",
+]
 # blur-background = true;
 # blur-background-exclude = [
 #   "window_type = 'dock'",
