--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -40,7 +40,7 @@ bindl = , switch:off:Lid Switch, exec, hyprctl keyword monitor "eDP-1, 1920x1080
 # Set programs that you use
 $terminal = kitty
 $fileManager = nautilus
-$menu = wofi
+$menu = sh ~/.config/rofi/launcher.sh
 
 #################
 ### AUTOSTART ###
@@ -51,7 +51,8 @@ $menu = wofi
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & nm-applet & blueman-applet
+# exec-once = nm-applet & blueman-applet
+exec-once = waybar & hyprpaper 
 
 
 #############################
@@ -217,12 +218,14 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, Q, killactive,
-bind = $mainMod + Shift, P, exit,
+bind = $mainMod + Shift, P, exec, sh ~/.config/rofi/power-menu.sh 
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, F, togglefloating,
+bind = $mainMod, TAB, fullscreen, 1
 bind = $mainMod, P, exec, $menu
+bind = $mainMod, W, exec, sh ~/dotfiles/scripts/rofi-archwiki.sh -d -l "pt" 
 bind = $mainMod, R, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+# bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
@@ -277,8 +280,8 @@ bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+bindel = ,XF86MonBrightnessUp, exec,sh ~/.config/waybar/scripts/brightness-control.sh -o i  
+bindel = ,XF86MonBrightnessDown, exec,sh ~/.config/waybar/scripts/brightness-control.sh -o d  
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
@@ -303,4 +306,4 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
-windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:1,pinned:0
