changes in qtile keymaps scripts, rofi scripts and tmux automatically clone tpm

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -49,4 +49,6 @@ set -g @catppuccin_status_connect_separator "no"
 
 set -g @catppuccin_directory_text "#{pane_current_path}"
 
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 run '~/.tmux/plugins/tpm/tpm'
