--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -72,11 +72,11 @@ margin-top = 0
 separator = |
 separator-foreground = ${colors.flamingo}
 
-font-0 = "Hack Nerd Font Mono:size=10;1"
-font-1 = "Hack Nerd Font Mono:size=20;4"
+font-0 = "JetBrainsMono Nerd Font:size=10;1"
+font-1 = "JetBrainsMono Nerd Font:size=12;1"
 
-modules-left = xworkspaces i3 xwindow
-modules-right = filesystem xbacklight pulseaudio battery memory cpu temperature backlight xkeyboard date systray
+modules-left = xworkspaces xwindow
+modules-right = network memory cpu temperature backlight battery pulseaudio xkeyboard date systray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -87,12 +87,19 @@ enable-ipc = true
 ; wm-restack = bspwm
 wm-restack = i3
 
-; override-redirect = true
-;
 [module/i3]
 type = internal/i3
-label-focused = "%index%: %mode%"
-format = <label-focused>
+
+pin-workspaces = false
+show-urgent = false
+strip-wsnumbers = false
+index-sort = false
+enable-click = false
+enable-scroll = false
+wrapping-scroll = false
+reverse-scroll = false
+fuzzy-match = false
+format = <label-mode>
 
 [module/systray]
 type = internal/tray
@@ -103,7 +110,7 @@ tray-spacing = 8pt
 type = internal/backlight
 card = intel_backlight
 enable-scroll = false
-format = <label>
+format =  <label>
 
 [module/temperature]
 type = internal/temperature
@@ -144,135 +151,51 @@ label-empty-padding = 1
 type = internal/xwindow
 label = %title:0:60:...%
 
-; [module/filesystem]
-; type = internal/fs
-; interval = 25
-; mount-0 = /
-; label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
-; label-unmounted = %mountpoint% not mounted
-; label-unmounted-foreground = ${colors.transparent}
-
 [module/battery]
 type = internal/battery
 
-; This is useful in case the battery never reports 100% charge
-; Default: 100
 full-at = 99
 
-; format-low once this charge percentage is reached
-; Default: 10
-; New in version 3.6.0
 low-at = 5
 
-; Use the following command to list batteries and adapters:
-; $ ls -1 /sys/class/power_supply/
 battery = BAT1
 adapter = ADP1
 
-; If an inotify event haven't been reported in this many
-; seconds, manually poll for new values.
-;
-; Needed as a fallback for systems that don't report events
-; on sysfs/procfs.
-;
-; Disable polling by setting the interval to 0.
-;
-; Default: 5
-
 poll-interval = 5
 
-; see "man date" for details on how to format the time string
-; NOTE: if you want to use syntax tags here you need to use %%{...}
-; Default: %H:%M:%S
 time-format = %H:%M
 
-; Available tags:
-;   <label-charging> (default)
-;   <bar-capacity>
-;   <ramp-capacity>
-;   <animation-charging>
 format-charging = %{T2}<animation-charging>%{T-} <label-charging>
-
-; Available tags:
-;   <label-discharging> (default)
-;   <bar-capacity>
-;   <ramp-capacity>
-;   <animation-discharging>
 format-discharging = %{T2}<ramp-capacity>%{T-} <label-discharging>
-
-; Available tags:
-;   <label-full> (default)
-;   <bar-capacity>
-;   <ramp-capacity>
 format-full = %{T2}<ramp-capacity>%{T-} <label-full>
-
-; Format used when battery level drops to low-at
-; If not defined, format-discharging is used instead.
-; Available tags:
-;   <label-low>
-;   <animation-low>
-;   <bar-capacity>
-;   <ramp-capacity>
-; New in version 3.6.0
 format-low = <label-low> <animation-low>
-
-; Available tokens:
-;   %percentage% (default) - is set to 100 if full-at is reached
-;   %percentage_raw%
-;   %time%
-;   %consumption% (shows current charge rate in watts)
 label-charging = %percentage%% 
-
-; Available tokens:
-;   %percentage% (default) - is set to 100 if full-at is reached
-;   %percentage_raw%
-;   %time%
-;   %consumption% (shows current discharge rate in watts)
 label-discharging = %percentage%% 
-
-; Available tokens:
-;   %percentage% (default) - is set to 100 if full-at is reached
-;   %percentage_raw%
 label-full = Fully charged
-
-; Available tokens:
-;   %percentage% (default) - is set to 100 if full-at is reached
-;   %percentage_raw%
-;   %time%
-;   %consumption% (shows current discharge rate in watts)
-; New in version 3.6.0
 label-low = BATTERY LOW
 
-; Only applies if <ramp-capacity> is used
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
 
-; Only applies if <bar-capacity> is used
 bar-capacity-width = 10
 
-; Only applies if <animation-charging> is used
 animation-charging-0 = 
 animation-charging-1 = 
 animation-charging-2 = 
 animation-charging-3 = 
 animation-charging-4 = 
-; Framerate in milliseconds
 animation-charging-framerate = 750
 
-; Only applies if <animation-discharging> is used
 animation-discharging-0 = 
 animation-discharging-1 = 
 animation-discharging-2 = 
 animation-discharging-3 = 
 animation-discharging-4 = 
-; Framerate in milliseconds
 animation-discharging-framerate = 500
 
-; Only applies if <animation-low> is used
-; New in version 3.6.0
 animation-low-0 = !
 animation-low-1 = 
 animation-low-framerate = 200
@@ -280,7 +203,6 @@ animation-low-framerate = 200
 [module/pulseaudio]
 type = internal/pulseaudio
 
-; format-volume-prefix = " "
 format-volume-prefix-foreground = ${colors.flamingo}
 format-volume = %{T2}<ramp-volume>%{T-} <label-volume>
 
@@ -288,7 +210,6 @@ label-volume = %percentage%%
 label-muted = %{T2}%{T-} muted
 label-muted-foreground = ${colors.flamingo}
 
-; Only applies if <ramp-volume> is used
 ramp-volume-0 = 
 ramp-volume-1 = 
 ramp-volume-2 = 
@@ -308,128 +229,30 @@ label-indicator-background = ${colors.yellow}
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU"
-format-prefix-foreground = ${colors.flamingo}
-label = %percentage:2%%
+label =  %percentage:2%%
 
 [module/memory]
 type = internal/memory
 interval = 2
-label = RAM %percentage_used:2%%
-
-; type = internal/network
-; interval = 5
-; format-connected = <label-connected>
-; format-disconnected = <label-disconnected>
-; label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
-
-; [module/wlan]
-; inherit = network-base
-; interface-type = wireless
-; label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
-;
-; [module/eth]
-; inherit = network-base
-; interface-type = wired
-; label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
-
-; [module/wired-network]
-; type = internal/network
-; interface = eth1
-;
-; [module/wireless-network]
-; type = internal/network
-; interface = wlan0
-; interface-type = wireless
-; interval = 3.0
+label =  %percentage_used:2%%
 
 [module/network]
 type = internal/network
-; Name of the network interface to display. You can get the names of the
-; interfaces on your machine with `ip link`
-; Wireless interfaces often start with `wl` and ethernet interface with `eno` or `eth`
 interface = wlan0
-
-; If no interface is specified, polybar can detect an interface of the given type.
-; If multiple are found, it will prefer running interfaces and otherwise just
-; use the first one found.
-; Either 'wired' or 'wireless'
-; New in version 3.6.0
 interface-type = wireless
-
-; Seconds to sleep between updates
-; Default: 1
-interval = 3.0
-
-; NOTE: Experimental (might change or be removed in the future)
-; Test connectivity every Nth update by pinging 8.8.8.8
-; In case the ping fails 'format-packetloss' is used until the next ping
-; A value of 0 disables the feature
-; Default: 0
-;ping-interval = 3
-
-; @deprecated: Define min width using token specifiers (%downspeed:min% and %upspeed:min%)
-; Minimum output width of upload/download rate
-; Default: 3
+interval = 5.0
 udspeed-minwidth = 5
 
-; Accumulate values from all interfaces
-; when querying for up/downspeed rate
-; Default: false
-; accumulate-stats = true
-
-; Consider an `UNKNOWN` interface state as up.
-; Some devices like USB network adapters have 
-; an unknown state, even when they're running
-; Default: false
-; unknown-as-up = true
-
-; The unit used for displaying network speeds
-; For example if set to the empty string, a speed of 5 KB/s is displayed as 5 K
-; Default: B/s
-; New in version 3.6.0
-; speed-unit = ''
-; Available tags:
-;   <label-connected> (default)
-;   <ramp-signal>
-format-connected = %{T2}<ramp-signal>%{T-} <label-connected>
-
-; Available tags:
-;   <label-disconnected> (default)
+format-connected = %{T1}<ramp-signal> <label-connected>
 format-disconnected = <label-disconnected>
-
-; Used when connected, but ping fails (see ping-interval)
-; Available tags:
-;   <label-connected> (default)
-;   <label-packetloss>
-;   <animation-packetloss>
 format-packetloss = <animation-packetloss> <label-connected>
 
-; All labels support the following tokens:
-;   %ifname%    [wireless+wired]
-;   %local_ip%  [wireless+wired]
-;   %local_ip6% [wireless+wired]
-;   %essid%     [wireless]
-;   %signal%    [wireless]
-;   %upspeed%   [wireless+wired]
-;   %downspeed% [wireless+wired]
-;   %netspeed%  [wireless+wired] (%upspeed% + %downspeed%) (New in version 3.6.0)
-;   %linkspeed% [wired]
-;   %mac%       [wireless+wired] (New in version 3.6.0)
-
-; Default: %ifname% %local_ip%
 label-connected = %essid% %downspeed:9%
 label-connected-foreground = ${colors.flamingo}
 
-; Default: (none)
 label-disconnected = not connected
 label-disconnected-foreground = ${colors.blue}
 
-; Default: (none)
-;label-packetloss = %essid%
-;label-packetloss-foreground = #eefafafa
-
-; Only applies if <ramp-signal> is used
 ramp-signal-0 = 󰤯
 ramp-signal-1 = 󰤠
 ramp-signal-2 = 󰤟
@@ -437,13 +260,13 @@ ramp-signal-3 = 󰤢
 ramp-signal-4 = 󰤥
 ramp-signal-5 = 󰤨
 
-; Only applies if <animation-packetloss> is used
 animation-packetloss-0 = ⚠
 animation-packetloss-0-foreground = ${colors.yellow}
 animation-packetloss-1 = 📶
 animation-packetloss-1-foreground = ${colors.base} 
-; Framerate in milliseconds
 animation-packetloss-framerate = 500
+
+click-rigth=nm-applet
 
 [module/date]
 type = internal/date
