polybar change names

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -217,7 +217,7 @@ ramp-volume-2 = 
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
-
+format = <label-layout> <label-indicator>
 label-layout = %layout%
 label-layout-foreground = ${colors.flamingo}
 
