--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -240,11 +240,12 @@ exec_always --no-startup-id autotiling
 exec_always --no-startup-id autorandr --change 
 exec_always --no-startup-id feh --bg-fill /mnt/backup/Documents/Images/painting.jpg 
 exec_always --no-startup-id picom --config ~/.config/picom/picom.conf
-exec_always --no-startup-id ~/.config/polybar/launch.sh 
+exec_always --no-startup-id ~/.config/polybar/launch.sh  --hack
 exec_always --no-startup-id libinput-gestures-setup start
 exec_always --no-startup-id blueman-applet 
 exec_always --no-startup-id nm-applet 
 exec_always --no-startup-id flameshot 
+# exec_always --no-startup-id /usr/lib/xfce-polkit/xfce-polkit
 
 #theme
 
