hyprland some changes

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -30,7 +30,6 @@ bindl = , switch:on:Lid Switch, exec, hyprctl keyword monitor "eDP-1, disable"
 # trigger when the switch is turning off
 bindl = , switch:off:Lid Switch, exec, hyprctl keyword monitor "eDP-1, 1920x1080@60, 0x1080, 1"
 
-
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -49,11 +48,9 @@ $menu = sh ~/.config/rofi/launcher.sh
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = nm-applet & blueman-applet
-exec-once = waybar & hyprpaper 
-
+exec-once = nm-applet & blueman-applet
+exec-once = hyprpanel & hyprpaper 
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -63,7 +60,6 @@ exec-once = waybar & hyprpaper
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
 
 #####################
 ### LOOK AND FEEL ###
@@ -276,12 +272,12 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindel = ,XF86AudioRaiseVolume, exec, ~/scripts/volume-control.sh i
+bindel = ,XF86AudioLowerVolume, exec,  ~/scripts/volume-control.sh d
+bindel = ,XF86AudioMute, exec,  ~/scripts/volume-control.sh m
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec,sh ~/.config/waybar/scripts/brightness-control.sh -o i  
-bindel = ,XF86MonBrightnessDown, exec,sh ~/.config/waybar/scripts/brightness-control.sh -o d  
+bindel = ,XF86MonBrightnessUp, exec, ~/scripts/brightness-control.sh -o i  
+bindel = ,XF86MonBrightnessDown, exec, ~/scripts/brightness-control.sh -o d  
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
