--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,12 +7,14 @@ set -g mouse on
 
 set -g renumber-windows on #rename windows
 set -g set-clipboard on # use system clipboard
+set -g escape-time 0
+set -g history-limit 1000000
 
 # start with 1
 set -g base-index 1 
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
-
+setw -g mode-keys vi
 
 bind-key h select-pane -L
 bind-key j select-pane -D
@@ -22,11 +24,17 @@ bind-key l select-pane -R
 bind -n M-h previous-window
 bind -n M-l next-window
 
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind P paste-buffer
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 set-option -g status-position top
 
