change say, waybar and instalacao.md

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -22,6 +22,13 @@
     "all-outputs": true,
     "format": "{name}",
   },
+  "sway/window": {
+    "format": "{}",
+    "max-length": 50,
+    "all-outputs": true,
+    "offscreen-css": true,
+    "offscreen-css-text": "(inactive)",
+  },
 
   "sway/mode": {
     "format": " {}",
@@ -34,7 +41,7 @@
   },
   "clock": {
     "interval": 1,
-    "format": "{:%H:%M:%S}  ",
+    "format": "  {:%H:%M:%S}",
     "format-alt": "{:%A, %d/%m/%y}",
     "tooltip-format": "<tt><small>{calendar}</small></tt>",
     "calendar": {
@@ -67,17 +74,17 @@
     "interval": 10,
     "format": " {}%",
   },
-  "temperature": {
-    // "thermal-zone": 2,
-    // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-    "critical-threshold": 80,
-    // "format-critical": "{temperatureC}°C {icon}",
-    "format": "{temperatureC}°C {icon}",
-    "format-icons": ["", "", ""],
-  },
+  // "temperature": {
+  //   // "thermal-zone": 2,
+  //   "hwmon-path": "/sys/class/thermal/thermal_zone0",
+  //   "critical-threshold": 80,
+  //   "format-critical": "{icon} {temperatureC}°C",
+  //   "format": "{icon} {temperatureC}°C",
+  //   "format-icons": ["", "", ""],
+  // },
   "backlight": {
     // "device": "acpi_video1",
-    "format": "{percent}% ",
+    "format": "{icon} {percent}% ",
     "format-icons": ["", ""],
   },
   "battery": {
@@ -87,49 +94,44 @@
       "warning": 30,
       "critical": 15,
     },
-    "format": "{icon} {capacity}%",
-    "format-charging": "{icon} {capacity}%",
-    "format-plugged": "{icon} {capacity}%",
+    "format": "{icon}  {capacity}%",
     "format-alt": "{time} ",
-    // "format-good": "", // An empty format will hide the module
-    // "format-full": "",
     "format-icons": ["", "", "", "", ""],
+    "max-length": "25",
   },
   "network": {
-    "format-wifi": "  Wired ",
-    "format-ethernet": "  Wired ",
-    "format-linked": "{ifname} (No IP) ",
-    "format-disconnected": " Unwired",
-    "format-alt": "{ifname}: {ipaddr}/{cidr}",
+    "interface": "wlan0",
+    "format": "{ifname}",
+    "format-wifi": "  {essid} ({signalStrength}%)",
+    "format-ethernet": "󰊗  {ipaddr}/{cidr}",
+    "format-disconnected": "", //An empty format will hide the module.
+    "tooltip-format": "󰊗  {ifname} via {gwaddr}",
+    "tooltip-format-wifi": "  {essid} ({signalStrength}%)",
+    "tooltip-format-ethernet": "  {ifname}",
+    "tooltip-format-disconnected": "Disconnected",
+    "max-length": 50,
   },
-  // "pulseaudio": {
-  //   // "scroll-step": 1, // %, can be a float
-  //   "format": "{volume}%  {format_source}",
-  //   "format-bluetooth": "{volume}%  {format_source}",
-  //   "format-bluetooth-muted": " {format_source}",
-  //   "format-muted": " {format_source}",
-  //   "format-source": "{volume}% ",
-  //   "format-source-muted": "",
-  //   "on-click": "pavucontrol",
-  // },
+
   "pulseaudio": {
-    "format": "{volume}% {icon}",
-    "format-bluetooth": "{volume}% {icon}",
-    "format-muted": "",
+    "tooltip": false,
+    "scroll-step": 1,
+    "format": "{icon} {volume}%  {format_source}",
+    "format-bluetooth": "{icon} {volume}%   {format_source}",
+    "format-bluetooth-muted": "  {icon}  {format_source}",
+    "format-muted": "  {format_source}",
+    "format-source": " {volume}%",
+    "format-source-muted": "",
     "format-icons": {
-      "alsa_output.pci-0000_00_1f.3.analog-stereo": "",
-      "alsa_output.pci-0000_00_1f.3.analog-stereo-muted": "",
       "headphone": "",
       "hands-free": "",
       "headset": "",
       "phone": "",
-      "phone-muted": "",
       "portable": "",
       "car": "",
-      "default": ["", ""],
+      "default": ["", "", ""],
     },
-    "scroll-step": 1,
-    "on-click": "pavucontrol",
-    "ignored-sinks": ["Easy Effects Sink"],
+    "on-click-middle": "pavucontrol",
+    "on-click-right": "pactl set-source-mute @DEFAULT_SOURCE@ toggle",
+    "on-click": "pactl set-sink-mute @DEFAULT_SINK@ toggle",
   },
 }
