kitty, sway, tmux and zsh some adjustments

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,6 @@
 bind r source-file ~/.tmux.conf \; display-message "Reloaded!"
 
+set-option -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 set -g prefix C-s
@@ -9,6 +10,10 @@ set -g renumber-windows on #rename windows
 set -g set-clipboard on # use system clipboard
 set -g escape-time 0
 set -g history-limit 1000000
+
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 
 # start with 1
 set -g base-index 1 
@@ -21,8 +26,8 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-bind -n M-h previous-window
-bind -n M-l next-window
+bind -n M-n previous-window
+bind -n M-p next-window
 
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
