--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -59,9 +59,9 @@ exec swayidle -w \
       natural_scroll enabled
       middle_emulation enabled
   }
-  input * {
-      xkb_layout "us"
-      xkb_variant "intl"
+  input "type:keyboard" {
+      xkb_layout us 
+      xkb_variant intl 
   }
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
