all modifications in 30/04

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -18,12 +18,12 @@ detect-transient= true;
 mark-ovredir-focused = true;
 mark-wmwin-focused = true;
 use-damage = true;
-refresh-rate = 0;
 vsync = true;
 
-shadow-exclude = [
-"class_g = 'Dunst'",
-]
+# shadow-exclude = [
+# "class_g = 'Dunst'",
+# ]
+
 # blur-background = true;
 # blur-background-exclude = [
 #   "window_type = 'dock'",
