--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -69,7 +69,7 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec kitty 
+bindsym $mod+Return exec wezterm 
 
 # kill focused window
 bindsym $mod+q kill
@@ -236,9 +236,9 @@ bindsym $mod+Control l resize grow width 10 px or 10 ppt
 #     }
 # }
 
-exec_always --no-startup-id autotiling 
+# exec_always --no-startup-id autotiling 
 exec_always --no-startup-id autorandr --change 
-exec_always --no-startup-id feh --bg-fill /mnt/backup/Documents/Images/painting.jpg 
+exec_always --no-startup-id feh --bg-fill /media/erudhir/Documents/Images/a_house_in_the_snow.png 
 exec_always --no-startup-id picom --config ~/.config/picom/picom.conf
 exec_always --no-startup-id ~/.config/polybar/launch.sh  --hack
 exec_always --no-startup-id libinput-gestures-setup start
