--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -16,13 +16,14 @@ set $right l
 # Your preferred terminal emulator
 set $term kitty
 # Your preferred application launcher
-set $menu ~/.config/rofi/launcher.sh
-set $menu-power ~/.config/rofi/power-menu.sh
+
+set $menu ~/scripts/dmenu.sh
+set $menu-power ~/scripts/dmenu-power.sh
 
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /mnt/backup/Documents/Images/painting.jpg fill
+output * bg /media/erudhir/Documents/Images/painting.jpg fill
 
 # each display configuration
 output HDMI-A-1 resolution 1920x1080@144Hz position 0,0
