add XCompose and zprofile and add mouse config in sway

--- a/sway/.config/sway/autostart.conf
+++ b/sway/.config/sway/autostart.conf
@@ -2,4 +2,5 @@ exec autotiling
 exec swaync
 exec blueman-applet 
 exec nm-applet 
-exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec /usr/lib/hyprpolkitagent
+# exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
