change hyprland config too newest configurations

--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /mnt/backup/Documents/Images/painting.jpg
-wallpaper = , /mnt/backup/Documents/Images/painting.jpg
+preload = /media/erudhir/Documents/Images/wizard.png
+wallpaper = , /media/erudhir/Documents/Images/wizard.png
