--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -25,9 +25,8 @@
 monitor = eDP-1, 1920x1080@60, 0x1080, 1
 monitor = HDMI-A-1, 1920x1080@144, 0x0, 1
 
-# trigger when the switch is turning on
+# lid control
 bindl = , switch:on:Lid Switch, exec, hyprctl keyword monitor "eDP-1, disable"
-# trigger when the switch is turning off
 bindl = , switch:off:Lid Switch, exec, hyprctl keyword monitor "eDP-1, 1920x1080@60, 0x1080, 1"
 
 ###################
@@ -37,7 +36,7 @@ bindl = , switch:off:Lid Switch, exec, hyprctl keyword monitor "eDP-1, 1920x1080
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+$terminal = ghostty
 $fileManager = nautilus
 $menu = sh ~/.config/rofi/launcher.sh
 
@@ -49,7 +48,7 @@ $menu = sh ~/.config/rofi/launcher.sh
 # Or execute your favorite apps at launch like this:
 
 exec-once = nm-applet & blueman-applet
-exec-once = hyprpanel & hyprpaper 
+exec-once = waybar & hyprpaper 
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 #############################
@@ -114,32 +113,19 @@ decoration {
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
+    enabled = true
 
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-    bezier = easeOutQuint,0.23,1,0.32,1
-    bezier = easeInOutCubic,0.65,0.05,0.36,1
-    bezier = linear,0,0,1,1
-    bezier = almostLinear,0.5,0.5,0.75,1.0
-    bezier = quick,0.15,0,0.1,1
-
-    animation = global, 1, 10, default
-    animation = border, 1, 5.39, easeOutQuint
-    animation = windows, 1, 4.79, easeOutQuint
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
-    animation = fadeIn, 1, 1.73, almostLinear
-    animation = fadeOut, 1, 1.46, almostLinear
-    animation = fade, 1, 3.03, quick
-    animation = layers, 1, 3.81, easeOutQuint
-    animation = layersIn, 1, 4, easeOutQuint, fade
-    animation = layersOut, 1, 1.5, linear, fade
-    animation = fadeLayersIn, 1, 1.79, almostLinear
-    animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+    # Definições de Curvas Bezier
+    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    bezier = linear, 0.0, 0.0, 1.0, 1.0
+    
+    # Definição das animações
+    animation = windows, 1, 7, myBezier
+    animation = windowsOut, 1, 7, default, popin 80%
+    animation = border, 1, 10, default
+    animation = borderangle, 1, 8, default
+    animation = fade, 1, 7, default
+    animation = workspaces, 1, 6, default
 }
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
@@ -162,13 +148,6 @@ dwindle {
 master {
     new_status = master
 }
-
-# https://wiki.hyprland.org/Configuring/Variables/#misc
-misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
-}
-
 
 #############
 ### INPUT ###
