zed add keymaps and settings

--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -33,6 +33,8 @@
     "light": "Catppuccin Latte"
   },
 
+  // "features": { "edit_prediction_provider": "zed" },
+
   "languages": {
     "JavaScript": {
       "formatter": {
