fuzzel change some settings

--- a/fuzzel/.config/fuzzel/fuzzel.ini
+++ b/fuzzel/.config/fuzzel/fuzzel.ini
@@ -1,7 +1,9 @@
-font=Hack Nerd Font:size=16
+font=Hack Nerd Font
+; icon-theme=Adwaita
+icons-enabled=false
 placeholder= search
 match-counter=yes
-terminal=ghostty -e
+terminal=kitty -e
 
 lines=20
 horizontal-pad=20
