--- a/fuzzel/.config/fuzzel/power-menu.ini
+++ b/fuzzel/.config/fuzzel/power-menu.ini
@@ -1,10 +1,10 @@
-font=Hack Nerd Font:size=18
+font=Hack Nerd Font
 prompt=" Power: "
 terminal=ghostty -e
 
-width=15
+width=14
 lines=6
-line-height=36
+line-height=30
 vertical-pad=16
 inner-pad=10
 
