hyprland change some keybindings

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -213,10 +213,10 @@ bind = $mainMod SHIFT, K, movewindow, u
 bind = $mainMod SHIFT, J, movewindow, d
 
 # resize windows
-bind = $mainMod CONTROL, h, resizeactive, -40 0
-bind = $mainMod CONTROL, l, resizeactive, 40 0
-bind = $mainMod CONTROL, k, resizeactive, 0 -40
-bind = $mainMod CONTROL, j, resizeactive, 0 40
+binde = $mainMod CONTROL, h, resizeactive, -40 0
+binde = $mainMod CONTROL, l, resizeactive, 40 0
+binde = $mainMod CONTROL, k, resizeactive, 0 -40
+binde = $mainMod CONTROL, j, resizeactive, 0 40
 
 # Example special workspace (scratchpad)
 # bind = $mainMod, S, togglespecialworkspace, magic
