add waybar reload script

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -172,7 +172,8 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, TAB, fullscreen, 1
 bind = $mainMod, P, exec, $menu
-bind = $mainMod, W, exec, sh ~/dotfiles/scripts/rofi-archwiki.sh -d -l "pt" 
+bind = $mainMod, W, exec, sh ~/scripts/rofi-archwiki.sh -d -l "pt" 
+bind = $mainMod + Ctrl, R, exec, sh ~/scripts/waybar-reload.sh
 bind = $mainMod, R, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
 
